--- a/operario.html
+++ b/operario.html
@@ -105,8 +105,8 @@
                     </div>
 
                     <div class="form-group">
-                        <label for="cantidad">Cantidad ingresada:</label>
-                        <input type="number" id="cantidad" name="cantidad" min="1" step="1" disabled required>
+                        <label for="cantidad_disponible">Cantidad ingresada:</label>
+                        <input type="number" id="cantidad_disponible" name="cantidad_disponible" min="1" step="1" disabled required>
                     </div>
 
                     <div class="form-group">
