--- a/ventas2.html
+++ b/ventas2.html
@@ -253,6 +253,26 @@
     </div>
   </div>
 </div>
+<div style="margin-top:20px;">
+  <button id="btnGenerarOP" class="btn-submit" 
+          style="background-color:#17a2b8; color:white; padding:8px 15px; border:none; border-radius:6px; cursor:pointer;">
+    ⚙️ Generar Órdenes de Producción
+  </button>
+</div>
+<!-- Modal Órdenes de Producción -->
+<div id="modalOP" style="display:none; position:fixed; top:0; left:0; width:100%; height:100%; 
+    background: rgba(0,0,0,0.7); justify-content:center; align-items:center; z-index:1000;">
+  <div style="background:white; padding:20px; border-radius:8px; max-width:900px; width:95%; max-height:90%; overflow:auto; position:relative;">
+    <h3>Órdenes de Producción Generadas</h3>
+    <div id="contenidoOP" style="margin-top:15px;"></div>
+    <div style="margin-top:15px; display:flex; justify-content:flex-end; gap:10px;">
+      <button onclick="cerrarModalOP()" 
+        style="padding:8px 15px; background:#007bff; color:white; border:none; border-radius:6px; cursor:pointer;">
+        Cerrar
+      </button>
+    </div>
+  </div>
+</div>
 
 
   <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
