verificacion de stock

--- a/supervisor.html
+++ b/supervisor.html
@@ -52,7 +52,7 @@
               </tbody>
             </table>
           </div>
-          <button type="submit" class="btn-submit">Crear OP</button>
+          <button type="submit" id="btnCrearOP" class="btn-submit" disabled>Crear OP</button>
           <button type="button" onclick="cancelarOP()" class="btn-eliminar">Cancelar</button>
         </form>
       </div>
