Relacion OP con OV - reserva de producto (sin terminar)

--- a/supervisor.html
+++ b/supervisor.html
@@ -52,6 +52,28 @@
               </tbody>
             </table>
           </div>
+          
+
+
+
+
+          <div style="margin-bottom: 10px;">
+            <label for="tieneOV">¿Relacionar OV con esta OP?</label>
+            <select id="tieneOV">
+              <option value="no" selected>No</option>
+              <option value="si">Sí</option>
+            </select>
+          </div>
+
+          <div id="containerOVs"
+            style="display:none; margin-bottom: 10px; border: 1px solid #555; padding: 10px; border-radius: 5px;">
+            <button type="button" onclick="agregarOV()">➕ Agregar OV</button>
+            <div id="listaOVs"></div>
+          </div>
+
+
+
+
           <button type="submit" id="btnCrearOP" class="btn-submit" disabled>Crear OP</button>
           <button type="button" onclick="cancelarOP()" class="btn-eliminar">Cancelar</button>
         </form>
