--- a/ventas.html
+++ b/ventas.html
@@ -214,37 +214,80 @@
       </div>
 
       <!-- ===================== SECCIÓN FACTURAS ===================== -->
-      <div id="facturas" class="seccion" style="display:none;">
-        <h2>Facturación</h2>
-        <table id="tablaFacturas">
-          <thead>
-            <tr>
-              <th>ID Factura</th>
-              <th>Orden</th>
-              <th>Cliente</th>
-              <th>Fecha</th>
-              <th>Total</th>
-              <th>Acciones</th>
-            </tr>
-          </thead>
-          <tbody></tbody>
-        </table>
-      </div>
-    </main>
+<div id="facturas" class="seccion" style="display:none;">
+  <h2>Facturación</h2>
+
+  <!-- Tabla de Facturas -->
+  <div style="margin-top:20px;">
+    <table id="tablaFacturas" class="table-wrapper" style="width:100%; border-collapse: collapse;">
+      <thead>
+        <tr style="background-color:#f2f2f2;">
+          <th>ID Factura</th>
+          <th>Orden</th>
+          <th>Cliente</th>
+          <th>Fecha</th>
+          <th>Total</th>
+          <th>Acciones</th>
+        </tr>
+      </thead>
+      <tbody></tbody>
+    </table>
   </div>
+
+  <!-- Modal Detalle Factura -->
+  <!-- Modal PDF de Factura -->
+<div id="modalFacturaPDF" style="display:none; position:fixed; top:0; left:0; width:100%; height:100%; 
+    background: rgba(0,0,0,0.7); justify-content:center; align-items:center; z-index:1000;">
+  <div style="background:white; padding:20px; border-radius:8px; max-width:800px; width:95%; max-height:90%; overflow:auto; position:relative;">
+    <h3>Factura PDF</h3>
+    <iframe id="iframeFactura" style="width:100%; height:500px; border:none;"></iframe>
+    <div style="margin-top:15px; display:flex; justify-content:flex-end; gap:10px;">
+      <button onclick="descargarFacturaPDF()" 
+        style="padding:8px 15px; background:#28a745; color:white; border:none; border-radius:6px; cursor:pointer;">
+        Descargar PDF
+      </button>
+      <button onclick="cerrarModalFacturaPDF()" 
+        style="padding:8px 15px; background:#007bff; color:white; border:none; border-radius:6px; cursor:pointer;">
+        Cerrar
+      </button>
+    </div>
+  </div>
+</div>
+<!--
+<div style="margin-top:20px;">
+  <button id="btnGenerarOP" class="btn-submit" 
+          style="background-color:#17a2b8; color:white; padding:8px 15px; border:none; border-radius:6px; cursor:pointer;">
+    ⚙️ Generar Órdenes de Producción
+  </button>
+</div>
+Modal Órdenes de Producción -->
+<!--<div id="modalOP" style="display:none; position:fixed; top:0; left:0; width:100%; height:100%; 
+    background: rgba(0,0,0,0.7); justify-content:center; align-items:center; z-index:1000;">
+  <div style="background:white; padding:20px; border-radius:8px; max-width:900px; width:95%; max-height:90%; overflow:auto; position:relative;">
+    <h3>Órdenes de Producción Generadas</h3>
+    <div id="contenidoOP" style="margin-top:15px;"></div>
+    <div style="margin-top:15px; display:flex; justify-content:flex-end; gap:10px;">
+      <button onclick="cerrarModalOP()" 
+        style="padding:8px 15px; background:#007bff; color:white; border:none; border-radius:6px; cursor:pointer;">
+        Cerrar
+      </button>
+    </div>
+  </div>
+</div>
+-->
 
   <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
-
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
   <script>
     const supabaseUrl = "https://ldgrlfnmuvvaqsezjsvj.supabase.co";
     const supabaseKey = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImxkZ3JsZm5tdXZ2YXFzZXpqc3ZqIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTg5MzEwNDMsImV4cCI6MjA3NDUwNzA0M30.NrUTqCLkzMWUGqn2XIAsCY8H90vgHpuxhMT2zIVt3Zo";
     const supabaseClient = supabase.createClient(supabaseUrl, supabaseKey);
   </script>
   <script src="js/normalizarDireccion.js"></script>
-  <script src="js/ventas.js"></script>
+  <script src="js/ventas2.js"></script>
 </body>
 </html>
 
