--- a/ventas.html
+++ b/ventas.html
@@ -287,7 +287,7 @@ Modal Órdenes de Producción -->
     const supabaseClient = supabase.createClient(supabaseUrl, supabaseKey);
   </script>
   <script src="js/normalizarDireccion.js"></script>
-  <script src="js/ventas2.js"></script>
+  <script src="js/ventas.js"></script>
 </body>
 </html>
 
