--- a/supervisor.html
+++ b/supervisor.html
@@ -225,6 +225,59 @@
       <div id="detalleOrden"></div>
   </div>
 </div>
+<!-- Notificación de stock -->
+<div id="notificacionStock" style="
+    position: fixed;
+    top: 20px;
+    right: 20px;
+    width: 60px;
+    height: 60px;
+    background-color: #f44336;
+    border-radius: 50%;
+    display: none;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    box-shadow: 0 4px 12px rgba(0,0,0,0.3);
+    font-size: 28px;
+    color: white;
+    transition: transform 0.2s, background-color 0.3s;
+    z-index: 9999;
+">
+    🔔
+</div>
+
+<!-- Tooltip/modal dentro de la notificación -->
+<div id="tooltipStock" style="
+    position: fixed;
+    top: 90px;
+    right: 20px;
+    width: 320px;
+    max-height: 400px;
+    overflow-y: auto;
+    background-color: #fff;
+    border: 1px solid #ccc;
+    border-radius: 12px;
+    padding: 15px;
+    box-shadow: 0 6px 16px rgba(0,0,0,0.25);
+    display: none;
+    z-index: 9999;
+    font-family: Arial, sans-serif;
+">
+    <h4 style="margin-top:0; margin-bottom:10px; text-align:center;">Materias primas con stock insuficiente</h4>
+    <ul id="listaFaltantes" style="padding-left: 20px; margin-bottom: 10px; list-style: disc;"></ul>
+    <button id="btnIrPedido" style="
+        width: 100%;
+        padding: 10px;
+        background-color: #007bff;
+        color: white;
+        border: none;
+        border-radius: 6px;
+        cursor: pointer;
+        font-weight: bold;
+        transition: background-color 0.3s;
+    ">Ir al pedido de materias primas</button>
+</div>
 
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
