--- a/confirmar_recibido.html
+++ b/confirmar_recibido.html
@@ -3,39 +3,185 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Confirmación de Pedido</title>
+<title>Confirmación de Recepción</title>
+<link href="https://fonts.googleapis.com/css2?family=Mountains+of+Christmas:wght@400;700&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+<style>
+    body {
+        font-family: 'Roboto', sans-serif;
+        background: linear-gradient(to bottom, #a2d5f2, #e6f2e6);
+        margin: 0;
+        padding: 0;
+        overflow-x: hidden;
+        position: relative;
+        height: 100vh;
+    }
+
+    /* Contenedor principal */
+    .container {
+        width: 90%;
+        max-width: 600px;
+        margin: 50px auto;
+        background-color: #ffffffcc;
+        border-radius: 20px;
+        padding: 40px 30px;
+        text-align: center;
+        box-shadow: 0 8px 25px rgba(0,0,0,0.2);
+        position: relative;
+        z-index: 10;
+    }
+
+    h1 {
+        font-family: 'Mountains of Christmas', cursive;
+        color: #2e7d32;
+        font-size: 36px;
+        margin-bottom: 20px;
+        position: relative;
+        z-index: 10;
+    }
+
+    p {
+        font-size: 18px;
+        line-height: 1.8;
+        color: #333;
+    }
+
+    .success {
+        color: #2e7d32;
+        font-weight: bold;
+        font-size: 20px;
+        display: inline-flex;
+        align-items: center;
+        gap: 10px;
+        margin-top: 20px;
+    }
+
+    .error {
+        color: #d32f2f;
+        font-weight: bold;
+        margin-top: 20px;
+        font-size: 18px;
+    }
+
+    /* Icono check animado */
+    .checkmark {
+        width: 40px;
+        height: 40px;
+        border-radius: 50%;
+        display: inline-block;
+        border: 4px solid #2e7d32;
+        position: relative;
+        animation: pop 0.6s ease forwards;
+    }
+
+    .checkmark::after {
+        content: '';
+        position: absolute;
+        left: 10px;
+        top: 4px;
+        width: 12px;
+        height: 24px;
+        border-right: 4px solid #2e7d32;
+        border-bottom: 4px solid #2e7d32;
+        transform: rotate(45deg) scale(0);
+        animation: draw 0.6s ease 0.3s forwards;
+    }
+
+    @keyframes pop {
+        0% { transform: scale(0); }
+        60% { transform: scale(1.2); }
+        100% { transform: scale(1); }
+    }
+
+    @keyframes draw {
+        0% { transform: rotate(45deg) scale(0); }
+        100% { transform: rotate(45deg) scale(1); }
+    }
+
+    /* Copos de nieve */
+    .snowflake {
+        position: fixed;
+        top: -10px;
+        color: #fff;
+        font-size: 1em;
+        user-select: none;
+        z-index: 5;
+        pointer-events: none;
+        animation-name: fall;
+        animation-timing-function: linear;
+    }
+
+    @keyframes fall {
+        0% { transform: translateY(-10px) rotate(0deg); opacity:1; }
+        100% { transform: translateY(110vh) rotate(360deg); opacity:0.8; }
+    }
+</style>
 </head>
 <body>
-<h2>Confirmación de Pedido</h2>
-<p id="mensaje">Procesando...</p>
+<div class="container">
+    <h1>Confirmación de Recepción</h1>
+    <p id="mensaje">Procesando...</p>
+</div>
 
-<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+<!-- Copos de nieve -->
+<script>
+const snowCount = 50;
+for(let i=0;i<snowCount;i++){
+    const snow = document.createElement('div');
+    snow.classList.add('snowflake');
+    snow.style.left = Math.random() * 100 + 'vw';
+    snow.style.fontSize = (Math.random() * 10 + 10) + 'px';
+    snow.style.animationDuration = (Math.random() * 5 + 5) + 's';
+    snow.style.animationDelay = (Math.random() * 5) + 's';
+    snow.innerHTML = '❄';
+    document.body.appendChild(snow);
+}
+</script>
+
+<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2/dist/supabase.min.js"></script>
 <script>
 const supabaseUrl = "https://ldgrlfnmuvvaqsezjsvj.supabase.co";
 const supabaseKey = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImxkZ3JsZm5tdXZ2YXFzZXpqc3ZqIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTg5MzEwNDMsImV4cCI6MjA3NDUwNzA0M30.NrUTqCLkzMWUGqn2XIAsCY8H90vgHpuxhMT2zIVt3Zo";
 const supabaseClient = supabase.createClient(supabaseUrl, supabaseKey);
 
-const params = new URLSearchParams(window.location.search);
-const pedidoId = params.get("id");
-const mensaje = document.getElementById("mensaje");
-
-if (!pedidoId) {
-  mensaje.textContent = "No se encontró el pedido.";
-} else {
-  (async () => {
-    try {
-      const { data, error } = await supabaseClient
-        .from('orden_compra_mp')
-        .update({ estado: 'Recibido' })
-        .eq('id', pedidoId);
-      if (error) throw error;
-      mensaje.textContent = "¡Pedido confirmado como recibido!";
-    } catch (err) {
-      console.error(err);
-      mensaje.textContent = "Error al confirmar el pedido. Intente nuevamente.";
-    }
-  })();
+function obtenerIdPedido() {
+    const params = new URLSearchParams(window.location.search);
+    return params.get('id');
 }
+
+async function confirmarRecepcion() {
+    const id = obtenerIdPedido();
+    const mensaje = document.getElementById('mensaje');
+
+    if (!id) {
+        mensaje.textContent = "No se encontró el ID del pedido.";
+        mensaje.classList.add('error');
+        return;
+    }
+
+    try {
+        const { data, error } = await supabaseClient
+            .from('orden_compra_mp')
+            .update({ estado: 'Recibido' })
+            .eq('id', id)
+            .select();
+
+        if (error) throw error;
+
+        if (data.length === 0) {
+            mensaje.textContent = "No se encontró el pedido para actualizar.";
+            mensaje.classList.add('error');
+            return;
+        }
+
+        mensaje.innerHTML = `<span class="checkmark"></span> ¡Pedido ID ${id} confirmado como <span class="success">Recibido</span>! Gracias por su respuesta.`;
+    } catch (err) {
+        console.error(err);
+        mensaje.textContent = "Ocurrió un error al confirmar el pedido. Intente nuevamente.";
+        mensaje.classList.add('error');
+    }
+}
+
+document.addEventListener('DOMContentLoaded', confirmarRecepcion);
 </script>
 </body>
 </html>
