--- a/supervisor.html
+++ b/supervisor.html
@@ -15,7 +15,7 @@
     <aside class="sidebar">
       <h2>Supervisor</h2>
       <ul>
-        <li><button onclick="mostrarSeccion('ordenProduccion')">Creación OP</button></li>
+        <li><button id="btnMenuCreacionOP">Creación OP</button></li>
         <li><button onclick="mostrarSeccion('seguimientoOP'); cargarOP()">Seguimiento OP</button></li>
         <li><button onclick="mostrarSeccion('proveedor')">Gestión de Proveedores</button></li>
 
